Added styling to the elements

--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
     </header>
     <main>
       <h3>Explore the beauty of Japan!</h3>
-      <a href="<!--Link here-->">Learn More</a>
+      <a href="<!--Link here-->" class="button">Learn More</a>
       <img
         src="images/yiding-liu-JlxsAvKcgV8-unsplash.jpg"
         alt="A picture of a road passing through a torii"
       />
+      <button class="fun-button">Surprise Me!</button>
     </main>
     <footer>
       <p>Travel Teaser</p>
